@@ -3,6 +3,7 @@
 \alias{SNFdatasets}
 \alias{compare_datasets}
 \alias{fetch_datasets}
+\alias{read_dataset}
 \title{
   Download Datasets from the Swiss National Science Foundation
 }
@@ -11,13 +12,15 @@
   (SNF, FNS, SNSF) in CSV format.
 }
 \usage{
-fetch_datasets(dataset, dest.dir = NULL, ...)
+fetch_datasets(dataset, dest.dir = NULL, detect.dates = TRUE, ...)
 compare_datasets(dataset.old, dataset.new, ...)
+
+read_dataset(filename, detect.dates = TRUE, ...)
 }
 \arguments{
   \item{dataset}{%
     a character vector. When of length greater than one,
-    datasets are only downloaded, but not parsed.  Currently
+    datasets are only downloaded, but not read.  Currently
     supported are \code{Grant}, \code{GrantWithAbstracts},
     \code{Person}, \code{OutputdataScientificPublication},
     \code{OutputdataUseInspired},
@@ -33,10 +36,17 @@ compare_datasets(dataset.old, dataset.new, ...)
   \item{dest.dir}{%
     a directory; if \code{NULL}, a \code{\link{tempdir}} is used.
   }
+  \item{detect.dates}{%
+    logical: if \code{TRUE}, columns consisting of entries such as
+    \code{2000-10-31T00:00:00Z} are converted to \code{\link{Date}}
+  }
   \item{dataset.old}{
     string: the filename
   }
   \item{dataset.new}{
+    string: the filename
+  }
+  \item{filename}{
     string: the filename
   }
   \item{\dots}{
@@ -49,15 +59,18 @@ compare_datasets(dataset.old, dataset.new, ...)
   the SNF's website and stores them, with a date prefix, in
   directory \code{dest.dir}.  If the latter is NULL, a
   temporary directory is used (through \code{\link{tempdir}});
-  but much better is to use a more-permanent storage location.
+  but much better is to use a more-persistant storage location.
   If a file with today's date exists in \code{dest.dir}, that
-  file is read, and nothing is downloaded.
+  file is read, and nothing is downloaded.  If more than one
+  \code{dataset} is specified, those files are downloaded but
+  not read.
 
   For downloading, function \code{\link{download.file}} is
   used.  If it fails, \code{fetch_datasets} returns
-  \code{NULL}.
+  \code{NULL}.  Settings can be passed via \dots .
 
-  \code{compare_datasets} will match old and new dataset via
+
+  \code{compare_datasets} will match old and new \code{dataset} via
   column \code{GrantNumber} and report
   \itemize{
     \item added lines (in new, but not in old),
@@ -67,30 +80,34 @@ compare_datasets(dataset.old, dataset.new, ...)
 
 }
 \value{%
-  A \code{\link{data.frame}} for \code{fetch_datasets}; and
-  for \code{compare_datasets} a list of three components
-  named \code{added}, \code{removed} and \code{changed}.
+  A \code{\link{data.frame}} for \code{fetch_datasets} and
+  {read_dataset}. For \code{compare_datasets}, a
+  \code{\link{list}} of three components named \code{added},
+  \code{removed} and \code{changed}.
 }
-\references{
+\references{%
   \url{https://data.snf.ch/datasets}
 }
-%% \author{
-%% %%  ~~who you are~~
-%% }
+\author{
+  Silvia Martens and Enrico Schumann
+}
 %% \note{
 %% %%  ~~further notes~~
 %% }
-
-%% %% ~Make other sections like Warning with \section{Warning }{....} ~
-
+%% ~Make other sections like Warning with \section{Warning }{....} ~
 %% \seealso{
 %% %% ~~objects to See Also as \code{\link{help}}, ~~~
 %% }
 \examples{
 \donttest{
-## requires internet connection
+## requires internet connection, and file may be large
 dataset <- "Grant"
-SNF.dir  <- "~/Downloads/SNFdatasets"
+
+SNF.dir  <- tempdir()  ## this is just an example.
+                       ## In practice it's much more useful to
+                       ## store files in a persistant location,
+                       ## such as '~/Downloads/SNFdatasets'.
+
 data <- fetch_datasets(dataset = dataset, dest.dir = SNF.dir)
 
 ## all research institutions
@@ -99,16 +116,7 @@ table(data[["ResearchInstitution"]])
 ## grants to University of Lucerne
 data[data[["ResearchInstitution"]] == "University of Lucerne - LU", ]
 
-## keywords
-sort(unique(unlist(strsplit(g$Keywords, " *; *"))))
+## all keywords
+kw <- sort(unique(unlist(strsplit(data$Keywords, " *; *"))))
 }
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory (show via RShowDoc("KEYWORDS")):
-% \keyword{ ~kwd1 }
-% \keyword{ ~kwd2 }
-% Use only one keyword per line.
-% For non-standard keywords, use \concept instead of \keyword:
-% \concept{ ~cpt1 }
-% \concept{ ~cpt2 }
-% Use only one concept per line.
