@@ -1,3 +1,9 @@
+2023-09-11  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (fetch_datasets): new argument
+	'detect.dates'
+	(read_dataset): new function
+
 2023-09-10  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (compare_datasets): return list
